# News_Summarizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: app.py  train.py
backend/db/: mongo_config.py  schema.py
backend/model/: calibrated_gb_model.joblib  download.ipynb  news_classifier.joblib  sumAndclassification.py  summarizer.py  vectorizer.joblib
backend/utils/: pdf_reader.py
frontend/news-summarizer-frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/news-summarizer-frontend/src/: App.css  App.tsx  index.css
frontend/news-summarizer-frontend/src/components/: FileUpload.tsx  ProcessingActions.tsx  ResultsDisplay.tsx  SummarySection.tsx
frontend/news-summarizer-frontend/src/pages/: Index.tsx
frontend/news_summarizer_frontend/: package-lock.json  package.json  vite.config.js
frontend/news_summarizer_frontend/src/: App.css  App.jsx  index.css
frontend/news_summarizer_frontend/src/components/: Contact.jsx  FileUpload.jsx  NavBar.jsx  Summarize.jsx  TextSummarize.jsx
frontend/news_summarizer_frontend/src/pages/: Feature.jsx  Home.jsx  Navbar.jsx
