[project]
name = "news-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "ipykernel>=6.29.5",
    "nltk>=3.9.1",
    "pdfplumber>=0.11.7",
    "pymongo>=4.13.2",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.0.0",
]
